Htmls agendamientos, instalacion dependencias, urls y demas

--- a/templates/Portada.html
+++ b/templates/Portada.html
@@ -17,6 +17,7 @@
         <br>
         <br>
         <a href="{% url 'login' %}"><button>Login</button></a>
+        <a href="{% url 'reservas' %}"><button>Reservas</button></a>
         </center>
 
 </body>
