--- a/templates/Reservas.html
+++ b/templates/Reservas.html
@@ -7,7 +7,7 @@
     <Center>
     <h1>Reserva tu Sesión de Masajes</h1>
 
-    <form method="post">
+    <form action="{% url 'reservas' %}" method="post">
         {% csrf_token %}
         <label for="nombre">Nombre:</label>
         <input type="text" name="nombre" id="nombre" required placeholder="Ingrese su nombre">
@@ -20,10 +20,21 @@
         <label for="fecha">Fecha:</label>
         <input type="date" name="fecha" id="fecha" required>
         <label for="hora">Hora:</label>
-        <input type="time" name="hora" id="hora" required>                
+        <input type="time" name="hora" id="hora" required>
+        <input type="submit" value="Reservar">        
     </form>
 
-    <button type="submit">Reservar</button>
+           
+
+    
+
+    {% if messages %}
+    <ul>
+        {% for message in messages %}
+            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}   
 
     <a href="{% url 'portada' %}"><button>Portada</button></a>
     </Center>
